instance/istio-system/ingress/jaeger-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
spec:
  hosts:
  - "jaeger.hostname" # {"$kpt-set":"jaeger-hostname"}
  gateways:
  - main.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        port:
          number: 16686
        host: jaeger-query.istio-system.svc.cluster.local
